--- a/app/(pages)/(hackers)/_components/IndexHero/IndexHeroContent.module.scss
+++ b/app/(pages)/(hackers)/_components/IndexHero/IndexHeroContent.module.scss
@@ -5,11 +5,11 @@
     position: absolute;
     left: 120px;
     right: 120px;
-    top: 10%;
+    top: 4%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    row-gap: 162px;
+    row-gap: 100px;
     column-gap: 96px;
 
     text-align: left;
@@ -70,13 +70,34 @@
     }
 }
 
+.judge_info{
+    border-radius: 18px;
+    border: 1.5px solid rgba(255, 255, 255, 0.10);
+    background: rgba(255, 255, 255, 0.50);
+    backdrop-filter: blur(30px);
+    width: 100%;
+    padding: 35px 32px;
+    display: flex;
+    justify-content: space-between;
+
+    .judge_bunny_ducky_img{
+        position: absolute;
+        bottom: 0;
+        right: 0;
+    }
+    .schedule_button{
+        padding: 1% 4%;
+        border-radius: 20px;
+        border: 1.5px dashed #000;
+    }
+}
+
 .notification {
     border-radius: 18px;
     border: 1.5px solid rgba(255, 255, 255, 0.10);
     background: rgba(255, 255, 255, 0.50);
     backdrop-filter: blur(30px);
     width: 100%;
-    // text-align: center;
     padding: 35px 32px;
 
     @include mixins.desktop-s {
